Gestion score sur le jeu dechiffrement et les resultats (manque regler un bug sur jeuFinal)