@@ -18,6 +18,7 @@ import javax.swing.JTextField;
 
 public class JeuFinalGraphic extends MiniJeuGraphic{
 	public JeuFinal jeuFinal = new JeuFinal(Init.jeufinalcsv);
+
 	ZoneTexte zoneCentrale;
 	JTextArea textIndices, textIndice1, textIndice2, textIndice3;
 	JTextArea zoneIndices, zoneIndice1, zoneIndice2, zoneIndice3;
@@ -50,44 +51,44 @@ public class JeuFinalGraphic extends MiniJeuGraphic{
 		bgImage = new JLabel(new ImageIcon(Init.imagefondjeuquiz));
 		bgImage.setBounds(0, 0, fenetre.getWidth(), fenetre.getHeight());
 
-		this.add(bgImage, new Integer(0));
+		this.add(bgImage, Integer.valueOf(0));
 
 		titre = new Titre("4. Découvre le Mot Final", 70, 30, 410, 35);
-		this.add(titre, new Integer(1));
+		this.add(titre, Integer.valueOf(1));
 
-		this.add(boutonQuitter, new Integer(1));
+		this.add(boutonQuitter, Integer.valueOf(1));
 
-		this.add(zoneTimer, new Integer(1));
+		this.add(zoneTimer, Integer.valueOf(1));
 
-		this.add(iconeTimer, new Integer(2));
+		this.add(iconeTimer, Integer.valueOf(2));
 
 		zoneCentrale = new ZoneTexte("", titre.getX(), titre.getY()+titre.getHeight()+spacingHeight,zoneTimer.getX()+zoneTimer.getWidth()-titre.getX(), hauteurZoneCentrale);
-		this.add(zoneCentrale, new Integer(1));
+		this.add(zoneCentrale, Integer.valueOf(1));
 
 		textIndices = new JTextArea("Indices");
 		textIndices.setBounds(zoneCentrale.getX()+zoneCentrale.getWidth()/2-40, zoneCentrale.getY()+10, 80, 20);
 		textIndices.setForeground(foregroundIntituleIndice);
 		textIndices.setBackground(backgroundIntituleIndice);
 		textIndices.setFont(fontIntituleIndice);
-		this.add(textIndices, new Integer(2));
+		this.add(textIndices, Integer.valueOf(2));
 
 		zoneIndices = new JTextArea(jeuFinal.getCurrentIndice().getTxt0());
 		zoneIndices.setBounds(zoneCentrale.getX()+paddingWidth, textIndices.getY()+textIndices.getHeight()+beetweenIntituleAndIndice, zoneCentrale.getWidth()-paddingWidth*2, indiceHeight);
 		zoneIndices.setForeground(foregroundIndiceTrouve);
 		zoneIndices.setBackground(backgroundIndiceTrouve);
 		zoneIndices.setFont(fontIndice);
-		this.add(zoneIndices, new Integer(2));
+		this.add(zoneIndices, Integer.valueOf(2));
 
 		textIndice1 = new JTextArea("Indice Quiz");
 		textIndice1.setBounds(zoneCentrale.getX()+paddingWidth, zoneIndices.getY()+zoneIndices.getHeight()+paddingHeight, 400, 25);
 		textIndice1.setForeground(foregroundIntituleIndice);
 		textIndice1.setBackground(backgroundIntituleIndice);
 		textIndice1.setFont(fontIntituleIndice);
-		this.add(textIndice1, new Integer(2));
+		this.add(textIndice1, Integer.valueOf(2));
 
 		zoneIndice1 = new JTextArea(jeuFinal.getCurrentIndice().getTxt1());
 		zoneIndice1.setBounds(zoneCentrale.getX()+paddingWidth, textIndice1.getY()+textIndice1.getHeight()+beetweenIntituleAndIndice, zoneCentrale.getWidth()-paddingWidth*2, indiceHeight);
-		if(jeuFinal.ifIndiceTrouveQuiz(0, 50)){
+		if(jeuFinal.ifIndiceTrouve(0, Init.minQuiz)){
 			zoneIndice1.setForeground(foregroundIndiceTrouve);
 			zoneIndice1.setBackground(backgroundIndiceTrouve);
 		}else{
@@ -96,18 +97,18 @@ public class JeuFinalGraphic extends MiniJeuGraphic{
 			zoneIndice1.setBackground(backgroundIndicePasTrouve);
 		}
 		zoneIndice1.setFont(fontIndice);
-		this.add(zoneIndice1, new Integer(2));
+		this.add(zoneIndice1, Integer.valueOf(2));
 
 		textIndice2 = new JTextArea("Indice Mots de Passe");
 		textIndice2.setBounds(zoneCentrale.getX()+paddingWidth, zoneIndice1.getY()+zoneIndices.getHeight()+paddingHeight, 400, 25);
 		textIndice2.setForeground(foregroundIntituleIndice);
 		textIndice2.setBackground(backgroundIntituleIndice);
 		textIndice2.setFont(fontIntituleIndice);
-		this.add(textIndice2, new Integer(2));
+		this.add(textIndice2, Integer.valueOf(2));
 
 		zoneIndice2 = new JTextArea(jeuFinal.getCurrentIndice().getTxt2());
 		zoneIndice2.setBounds(zoneCentrale.getX()+paddingWidth, textIndice2.getY()+textIndice1.getHeight()+beetweenIntituleAndIndice, zoneCentrale.getWidth()-paddingWidth*2, indiceHeight);
-		if(jeuFinal.ifIndiceTrouveQuiz(1, 50)){
+		if(jeuFinal.ifIndiceTrouve(1, Init.minMDP)){
 			zoneIndice2.setForeground(foregroundIndiceTrouve);
 			zoneIndice2.setBackground(backgroundIndiceTrouve);
 		}else{
@@ -116,18 +117,18 @@ public class JeuFinalGraphic extends MiniJeuGraphic{
 			zoneIndice2.setBackground(backgroundIndicePasTrouve);
 		}
 		zoneIndice2.setFont(fontIndice);
-		this.add(zoneIndice2, new Integer(2));
+		this.add(zoneIndice2, Integer.valueOf(2));
 
 		textIndice3 = new JTextArea("Indice Déchiffrements");
 		textIndice3.setBounds(zoneCentrale.getX()+paddingWidth, zoneIndice2.getY()+zoneIndices.getHeight()+paddingHeight, 400, 25);
 		textIndice3.setForeground(foregroundIntituleIndice);
 		textIndice3.setBackground(backgroundIntituleIndice);
 		textIndice3.setFont(fontIntituleIndice);
-		this.add(textIndice3, new Integer(2));
+		this.add(textIndice3, Integer.valueOf(2));
 
 		zoneIndice3 = new JTextArea(jeuFinal.getCurrentIndice().getTxt3());
 		zoneIndice3.setBounds(zoneCentrale.getX()+paddingWidth, textIndice3.getY()+textIndice1.getHeight()+beetweenIntituleAndIndice, zoneCentrale.getWidth()-paddingWidth*2, indiceHeight);
-		if(jeuFinal.ifIndiceTrouveQuiz(2, 50)){
+		if(jeuFinal.ifIndiceTrouve(2, Init.minDechiff)){
 			zoneIndice3.setForeground(foregroundIndiceTrouve);
 			zoneIndice3.setBackground(backgroundIndiceTrouve);
 		}else{
@@ -136,14 +137,14 @@ public class JeuFinalGraphic extends MiniJeuGraphic{
 			zoneIndice3.setBackground(backgroundIndicePasTrouve);
 		}
 		zoneIndice3.setFont(fontIndice);
-		this.add(zoneIndice3, new Integer(2));
+		this.add(zoneIndice3, Integer.valueOf(2));
 
 		zoneMotFinal = new JTextField();
 		zoneMotFinal.setBounds(zoneCentrale.getX()+100, zoneCentrale.getY()+zoneCentrale.getHeight()+spacingHeight, zoneCentrale.getWidth()-200, 50);
 		zoneMotFinal.setForeground(Color.BLACK);
 		zoneMotFinal.setBackground(Color.WHITE);
 		zoneMotFinal.setFont(fontIndice);
-		this.add(zoneMotFinal, new Integer(1));
+		this.add(zoneMotFinal, Integer.valueOf(1));
 
 		boutonValider = new Bouton("Valider", zoneCentrale.getX()+zoneCentrale.getWidth()/2-boutonQuitter.getWidth()/2, boutonQuitter.getY(), boutonQuitter.getWidth(), boutonQuitter.getHeight());
 		boutonValider.addActionListener(new ActionListener(){
@@ -155,13 +156,8 @@ public class JeuFinalGraphic extends MiniJeuGraphic{
 				mainController.startResultatFinaux();
 			}
 		});
-		this.add(boutonValider, new Integer(1));
+		this.add(boutonValider, Integer.valueOf(1));
 
 	}
 
-	public boolean isMotTrouve(){
-		return true;
-	}
-
-	// CE CODE PEUT ETRE SIMPLIFIEE AVEC DES METHODES
 }
